<resources>
    <string name="app_name">Chatter!</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="signin">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="usr">User Name</string>
    <string name="password">Password</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Cpswd">Confirm Password</string>
    <string name="mail">Email</string>
    <string name="logo">Logo</string>
    <string name="sign_up">Sign up</string>
    <string name="user_pfp">User profile picture</string>
    <string name="log_out">Log out</string>
</resources>