<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/AppLogo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/logo"/>

    <TextView
        android:id="@+id/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/AppLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/app_name"
        android:textColor="@color/RoyalPurple"
        android:textSize="40sp"/>

    <EditText
        android:id="@+id/in_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/AppName"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:autofillHints="name"
        android:background="@drawable/in_border"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"/>

    <EditText
        android:id="@+id/in_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/in_email"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:autofillHints="username"
        android:background="@drawable/in_border"
        android:hint="@string/usr"
        android:inputType="text"
        android:paddingStart="25dp"
        android:paddingEnd="25dp" />

    <EditText
        android:id="@+id/in_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/in_username"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/in_border"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:autofillHints="password"/>

    <EditText
        android:id="@+id/in_cPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/in_password"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/in_border"
        android:hint="@string/Cpswd"
        android:inputType="textPassword"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:autofillHints="password" />

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/in_cPassword"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:background="@drawable/button" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:text="@string/cancel"
            android:layout_toEndOf="@id/btn_signUp"
            android:textColor="@color/white"
            android:background="@drawable/button" />

    </RelativeLayout>

</RelativeLayout>